<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".Instructions">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#2D4BF6"
        android:paddingTop="16dp"
        android:text="Instructions"
        android:textAlignment="center"
        android:textColor="#010A40"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/insh"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/ins1"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/ins2"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/ins3"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/ins4"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/ins5"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/ins6"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/ins7"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/back"
        android:layout_width="234dp"
        android:layout_height="85dp"
        android:background="#A202BE"
        android:text="return"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>